--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0841857150&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6bae05a890&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0841807b50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0841807d50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6badd1ca50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6badd1cc50&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0841dba550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0841dba750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6bae2d53d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6bae2d55d0&gt;]</pre>
 </div>
 
 </div>
