--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f876a4dd850&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3a5d298210&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f876a7cbc90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f876aaaecd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3a5c3a6b50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3a5c3a6d50&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f876b05a3d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f876b05a5d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3a5c962510&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3a5c962710&gt;]</pre>
 </div>
 
 </div>
