--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1c6fbff110&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa243a641d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1c6ff0bb50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1c6ff0b310&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa243409cd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa2436dcd10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1c704bb510&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1c704bb710&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa243c89410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa243c89610&gt;]</pre>
 </div>
 
 </div>
