--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9933108a50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa83844e490&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9932ac5950&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9932ac5b90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa838152d10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa838152f10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9933072290&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f99330724d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa8387105d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa8387107d0&gt;]</pre>
 </div>
 
 </div>
