--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0355fe9210&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2e73006a90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f035512da90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f035512dc90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2e73317b10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2e73317cd0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f03556e73d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f03556e75d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2e736524d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2e738c35d0&gt;]</pre>
 </div>
 
 </div>
