--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2e73006a90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb00b44d290&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2e73317b10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2e73317cd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb00ae0cbd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb00ae0cdd0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2e736524d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2e738c35d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb00b3c84d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb00b3c86d0&gt;]</pre>
 </div>
 
 </div>
