--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ffbc455fb90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb4f6903310&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ffbc4b2cc90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ffbc4b2ce90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb4f661ab90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb4f661ad90&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ffbc50da690&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ffbc50da890&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb4f6bc74d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb4f6bc76d0&gt;]</pre>
 </div>
 
 </div>
