--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe4d86a7750&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f44034e0b90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe4d838cbd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe4d838cdd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f440318eb90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f44031b7cd0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe4d893b490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe4d893b690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4403763450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4403759510&gt;]</pre>
 </div>
 
 </div>
