--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f219ce74450&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6ef4628d90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f219c841c50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f219c841e50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6ef45cbb50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6ef45cbd50&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f219cded550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f219cded750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6ef4b88490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6ef4b88690&gt;]</pre>
 </div>
 
 </div>
