--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7d1224a910&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f018d559150&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7d1133bd10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7d1133b210&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f018d887b90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f018d887d90&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7d118ec450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7d118ec650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f018de32450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f018de32650&gt;]</pre>
 </div>
 
 </div>
