--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f018d559150&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fec0ffb4490&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f018d887b90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f018d887d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fec0f0a8bd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fec0f0a8dd0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f018de32450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f018de32650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fec0f6564d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fec0f6566d0&gt;]</pre>
 </div>
 
 </div>
