--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9f2ae20150&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f94b3c38310&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9f2aa85c10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9f2aa85e10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f94b2dcdb90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f94b2dcdd90&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9f2b03e590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9f2b03e790&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f94b33b9590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f94b33b9790&gt;]</pre>
 </div>
 
 </div>
