--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8ec1278910&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6375660290&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8ec0c3eb90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8ec0c3ed90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f63753349d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6375334bd0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8ec11eb550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8ec11eb750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f63758da310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f63758da510&gt;]</pre>
 </div>
 
 </div>
