--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb588e24d50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f227221a210&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb588002c50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb588002e50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2271bda910&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2271bdab10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb5885af550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb5885af750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f227218b210&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f227218b410&gt;]</pre>
 </div>
 
 </div>
