--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f75075492d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fcf41dc2250&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f750725fc10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f750725fe10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fcf25c66a90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fcf25c66c90&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f750784c5d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f750784c7d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fcf26222410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fcf26222610&gt;]</pre>
 </div>
 
 </div>
