--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fab195aad10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe4ecbf7e90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fab18fb4690&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fab192b1cd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe4ec56cb10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe4ec56cd10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fab1985d410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fab1985d610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe4ecb1a450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe4ecb1a650&gt;]</pre>
 </div>
 
 </div>
