--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8fb2538550&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f204ede2850&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8fb1ead9d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8fb1e90090&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f204e7a7bd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f204e7a7dd0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8fb2466290&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8fb24c9910&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f204ed53490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f204ed53690&gt;]</pre>
 </div>
 
 </div>
