--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f461f82d210&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff435823790&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f461e91dc10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f461e91de10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff4351d2b90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff4351d2d90&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f461ef0e590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f461ef0e790&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff43577e490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff43577e690&gt;]</pre>
 </div>
 
 </div>
