--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7faed260d610&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff520f6ff50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7faed2269c50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7faed2269e50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff520be7a90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff520be7c90&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7faed2823590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7faed2823790&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff521192310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff521192510&gt;]</pre>
 </div>
 
 </div>
