--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f22bf81b750&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb0023b9e50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f22bf494a50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f22bf494c50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb001d84b10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb001d84d10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f22bfa39450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f22bfa39650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb002332390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb002332590&gt;]</pre>
 </div>
 
 </div>
