--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb0023b9e50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7437540590&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb001d84b10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb001d84d10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f74371a19d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f74371a1bd0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb002332390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb002332590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f743775d310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f743775d510&gt;]</pre>
 </div>
 
 </div>
