--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb5a7fdf310&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f471160f5d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb5a85b1ad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb5a85b1d10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4710fae410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4710fc0e90&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb5a8b5c450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb5a8b5c690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f47115e31d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f471157f750&gt;]</pre>
 </div>
 
 </div>
